Changes since version 3.0.1
---------------------------

- Added communicator initialize method which takes a InitializationData
  structure containing communicator members which are only allowed
  to be set during communicator creation. Currently included are
  Properties, Logger, Stats and default context. The initializeWith 
  communicator initialization functions have been deprecated and the 
  setLogger(), setStats() and setDefaultContext() methods have been 
  removed.

- Fixed a bug where the ice_locator proxy method wouldn't change the
  proxy locator.

- Added requestId to Current.

- Performance improvements if an AMI callback object is reused with 
  the same proxy.

- If several proxies share the same connection, and an operation call
  on one of the proxies causes a failure and the shared connection to
  be closed, then subsequent calls on the other proxies will try to
  establish a new connection instead of throwing an exception, even if
  retries are disabled.

- Fixed bug in the unmarshaling code for sequences of classes
  that use the ["clr:collection"] metadata directive:
  if such a class sequence contained null references, the client
  could not unmarshal the sequence.

- Fixed bug in identityToString() and proxyToString() that could
  cause incorrect string values to be returned for identities
  containing characters outside the ASCII range or for characters
  that must be escaped, such as '/'.

- Fixed bug in addRouter() and removeRouter() that could cause the
  run time to get confused about which routers were active installed.
  
- If a proxy is not configured with a -h parameter, Ice will now
  attempt to connect using all local interfaces. The loopback interface 
  (127.0.0.1) will only be tried if it is the only local interface present.

- .NET 2.0 is now the target for All.sln. To build a version of Ice
  for C# that is compatible with .NET 1.1, use All_11.sln instead.

- Added the "clr:property" directive for classes and structures.