@@ -1,0 +1,23 @@
+// **********************************************************************
+//
+// Copyright (c) 2003-2006 ZeroC, Inc. All rights reserved.
+//
+// This copy of Ice is licensed to you under the terms described in the
+// ICE_LICENSE file included in this distribution.
+//
+// **********************************************************************
+
+#ifndef BACKEND_ICE
+#define BACKEND_ICE
+
+module Test
+{
+
+interface Backend
+{
+    void shutdown();
+};
+
+};
+
+#endif
