@@ -1,0 +1,23 @@
+// **********************************************************************
+//
+// Copyright (c) 2003-2006 ZeroC, Inc. All rights reserved.
+//
+// This copy of Ice is licensed to you under the terms described in the
+// ICE_LICENSE file included in this distribution.
+//
+// **********************************************************************
+
+using Test;
+
+public sealed class BackendI : BackendDisp_
+{
+    public BackendI()
+    {
+    }
+
+    public override void
+    shutdown(Ice.Current current)
+    {
+        current.adapter.getCommunicator().shutdown();
+    }
+}
