@@ -1,0 +1,35 @@
+# **********************************************************************
+#
+# Copyright (c) 2003-2006 ZeroC, Inc. All rights reserved.
+#
+# This copy of Ice is licensed to you under the terms described in the
+# ICE_LICENSE file included in this distribution.
+#
+# **********************************************************************
+
+top_srcdir	= ../../..
+
+TARGETS		= client.exe server.exe 
+
+C_SRCS		= Client.cs generated/Backend.cs
+S_SRCS		= Server.cs generated/Backend.cs BackendI.cs 
+
+SLICE_SRCS	= $(SDIR)/Backend.ice
+
+SDIR		= .
+
+GDIR		= generated
+
+include $(top_srcdir)/config/Make.rules.cs
+
+MCSFLAGS	:= $(MCSFLAGS) -target:exe
+
+SLICE2CSFLAGS	:= $(SLICE2CSFLAGS) --ice -I. -I$(slicedir)
+
+client.exe: $(C_SRCS) $(GEN_SRCS)
+	$(MCS) $(MCSFLAGS) -out:$@ $(call ref,icecs) $(call ref,glacier2cs) $^
+
+server.exe: $(S_SRCS) $(GEN_SRCS)
+	$(MCS) $(MCSFLAGS) -out:$@ $(call ref,icecs) $(call ref,glacier2cs) $^
+
+include .depend
