@@ -1,0 +1,67 @@
+#!/usr/bin/env python
+# **********************************************************************
+#
+# Copyright (c) 2003-2006 ZeroC, Inc. All rights reserved.
+#
+# This copy of Ice is licensed to you under the terms described in the
+# ICE_LICENSE file included in this distribution.
+#
+# **********************************************************************
+
+import os, sys, getopt
+
+for toplevel in [".", "..", "../..", "../../..", "../../../.."]:
+    toplevel = os.path.normpath(toplevel)
+    if os.path.exists(os.path.join(toplevel, "config", "TestUtil.py")):
+        break
+else:
+    raise "can't find toplevel directory!"
+
+sys.path.append(os.path.join(toplevel, "config"))
+import TestUtil
+
+if not os.environ.has_key('ICE_HOME'):
+    print "ICE_HOME is not defined."
+    sys.exit(0)
+
+ice_home = os.environ['ICE_HOME']
+
+try:
+    opts, args = getopt.getopt(sys.argv[1:], "m")
+except getopt.GetoptError:
+    usage()
+
+mono = 0
+for o, a in opts:
+    if o == "-m":
+        mono = 1
+
+if not TestUtil.isWin32():
+    mono = 1
+
+router = os.path.join(ice_home, "bin", "glacier2router")
+
+command = router + TestUtil.clientServerOptions + \
+	  r' --Ice.PrintProcessId' \
+          r' --Glacier2.RoutingTable.MaxSize=10' + \
+          r' --Glacier2.Client.Endpoints="default -p 12347 -t 10000"' + \
+          r' --Glacier2.Admin.Endpoints="tcp -h 127.0.0.1 -p 12348 -t 10000"' + \
+          r' --Glacier2.CryptPasswords="' + toplevel + r'/test/Glacier2/attack/passwords"'
+
+print "starting router...",
+starterPipe = os.popen(command)
+TestUtil.getServerPid(starterPipe)
+TestUtil.getAdapterReady(starterPipe)
+print "ok"
+
+name = os.path.join("Glacier2", "attack")
+
+TestUtil.clientServerTest(mono, name)
+
+starterStatus = TestUtil.closePipe(starterPipe)
+
+if starterStatus:
+    TestUtil.killServers()
+    sys.exit(1)
+
+sys.exit(0)
